Removing jumpy css margin addition.  Fixing issue where click triggers a focus causing a temporary outline that is immediately removed. tabGuarded is now reset onBlur instead of having any handlers in onFocus onClick logic moved to bottom of the handelr as to not interfere with seleciton logic

--- a/react-live.css
+++ b/react-live.css
@@ -27,7 +27,6 @@
 .prism-code.tab-guarded:focus{
     outline: 1px solid #212121;
     outline: 1px auto -webkit-focus-ring-color;
-    margin: 1px;
 }
 
 .token.comment,
